User controller and authentication