@@ -1,6 +1,7 @@
 package pl.plecicki.taskmanager.services;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.crypto.bcrypt.BCrypt;
 import org.springframework.stereotype.Service;
 import pl.plecicki.taskmanager.domain.dtos.UserDto;
 import pl.plecicki.taskmanager.domain.entities.User;
@@ -8,6 +9,7 @@ import pl.plecicki.taskmanager.exceptions.UserDoesntExist;
 import pl.plecicki.taskmanager.mappers.UserMapper;
 import pl.plecicki.taskmanager.repositories.UserRepository;
 
+import java.util.LinkedList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -19,15 +21,24 @@ public class UserService {
     private final UserMapper userMapper;
 
     public List<User> findUsers(String name, String surname) throws UserDoesntExist {
-        List<User> users = userRepository.findAll().stream()
-                .filter(user -> name == null || user.getName().equals(name))
-                .filter(user -> surname == null || user.getSurname().equals(surname))
-                .collect(Collectors.toList());
+        List<User> users = userRepository.findAll();
+        if (name != null && !"".equals(name)) {
+            users = users.stream()
+                    .filter(user -> user.getName().equals(name))
+                    .toList();
+        }
+        if (surname != null && !"".equals(surname)) {
+            users = users.stream()
+                    .filter(user -> user.getName().equals(surname))
+                    .toList();
+        }
         if (users.isEmpty()) throw new UserDoesntExist();
         return users;
     }
 
     public User addUser(UserDto userDto) {
+        String decodedPassword = BCrypt.hashpw(userDto.getPassword(), BCrypt.gensalt(12));
+        userDto.setPassword(decodedPassword);
         return userRepository.save(userMapper.userDtoToUser(userDto));
     }
 
